# corstream

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/: FUNDING.yml
corstream/: __init__.py  core.py
corstream/ops/: __init__.py
corstream/ops/asyncflow/: map_async.py
corstream/ops/control/: catch.py  retry.py  throttle.py
corstream/ops/diagnostic/: log.py
corstream/ops/transform/: batch.py  filter.py  map.py
corstream/sinks/: __init__.py
corstream/sinks/terminal/: for_each.py  reduce.py  to_list.py
examples/: basic_pipeline.py
tests/: test_batch.py  test_core.py  test_filter.py  test_log.py  test_map.py  test_map_async.py  test_reduce.py  test_throttle.py  test_to_list.py
