[tool.poetry]
name = "corstream"
version = "0.1.0"
description = "A coroutine composition framework for declarative async pipelines in Python"
authors = ["Shiv <shiv@zerobytes.fr>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "corstream" }]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
mypy = "^1.9.0"
black = "^24.3.0"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"